--- a/LearnC.html
+++ b/LearnC.html
@@ -4,15 +4,41 @@
         <title>
             C language
         </title>
+        <style>
+         body {
+               background-image: url("https://mcdn.wallpapersafari.com/medium/97/73/lrF7O8.png");
+               background-repeat: no-repeat;
+               background-size: 1000px 1000px;
+               }
+        </style>
         </head>
-        <body style="background-color: burlywood;">
-        <p>
+        <body>
+       
             <h1 style = "text-align:center ;">
                 C Language
             </h1>
         </p>
-    <p>
-        Introduction to C language
-    </p>
+<p>
+     Here we have designed A course on C language after completing this course you will have very good command on C language
+</p> 
+<pre>
+    <h1 style ="font-style: italic; text-align:left;">TOPICS TO BE COVERED:-</h1>
+   <h2 style="text-align:left;">
+    HISTORY OF C Language
+    C LANGUAGE USES AND ITS APPILICATIONS.
+    DEVELOPMENT OF C LANGUAGE.
+    OPERATORS IN C LANGUAGE.
+    STRUCTURE OF C LANGUAUGE.
+    EXECUTING FIRST PROGRAM IN C LANGUAGE.
+    DECISON CONTROL STATEMENTS(IF,ELSE).
+    Switcch STATEMENTS.
+    LOOPS(+NESTED LOOPS).
+    ARRAY(2D & MULTIDIMENSIONAL).
+    FUNCTIONS.
+    STRUCTURE.
+    ENUM.
+    Headerfiles and preprocessors. 
+    File handling in c language.</h2>
+</pre>
 </body>
 </html>
