--- a/LearnC.html
+++ b/LearnC.html
@@ -6,7 +6,7 @@
         </title>
         <style>
          body {
-               color: whilte;
+               color: white;
                background-image: url("https://mcdn.wallpapersafari.com/medium/97/73/lrF7O8.png");
                background-repeat: no-repeat;
                background-size: 1000px 1000px;
