Font color changed

--- a/LearnC.html
+++ b/LearnC.html
@@ -22,8 +22,8 @@
      Here we have designed A course on C language after completing this course you will have very good command on C language
 </p> 
 <pre>
-    <h1 style ="font-style: italic; text-align:left;">TOPICS TO BE COVERED:-</h1>
-   <h2 style="text-align:left;">
+    <h1 style ="font-style: italic; text-align:left;co;">TOPICS TO BE COVERED:-</h1>
+   <h2 style="text-align:left;color:white;">
     HISTORY OF C Language
     C LANGUAGE USES AND ITS APPILICATIONS.
     DEVELOPMENT OF C LANGUAGE.
